objects/Workplan_Task_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Criteria_Type__c</fullName>
        <label>Criteria Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Task Creation Criteria</fullName>
                </value>
                <value>
                    <fullName>Task Completion Criteria</fullName>
                </value>
                <value>
                    <fullName>Task Generation Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_DML_Event__c</fullName>
        <label>Object DML Event</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal To</fullName>
                </value>
                <value>
                    <fullName>Not Equal To</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Number__c</fullName>
        <label>Rule Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Task_Template__c</fullName>
        <label>Workplan Task Template</label>
        <referenceTo>Workplan_Task_Template__c</referenceTo>
        <relationshipLabel>Workplan Task Rules</relationshipLabel>
        <relationshipName>Workplan_Task_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>AIA - Custom object used to store the various rules which need to be satisfied for creation of a Workplan task according to the template. Multiple rules can be associated with each template task.
This object will replace the old functionality. 
This is implemented for Nov-2017 Release.</description>
    <label>Workplan Task Rule</label>
    <nameField>
        <displayFormat>WP Task Rule - {0000}</displayFormat>
        <label>Workplan Task Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Task Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>